# face_detect

./: CMakeLists.txt  detect.cpp  detect.h  main.cpp  make.txt
